--- a/goit-markup-hw-02/goit-markup-hw-02/portfolio.html
+++ b/goit-markup-hw-02/goit-markup-hw-02/portfolio.html
@@ -5,153 +5,180 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
     <header class="header">
-      <nav class="header-nav">
-        <a class="header-logo" href="./index.html">Web<span class="logo">Studio</span></a>
-        <ul class="header-list">
-          <li class="header-item">
+      <nav class="header nav">
+        <a class="link header-logo" href="./index.html"
+          >Web<span class="logo">Studio</span></a
+        >
+        <ul class="header list">
+          <li class="header item">
             <a class="header-link" href="./index.html">Studio</a>
           </li>
-          <li class="header-item">
+          <li class="header item">
             <a class="header-link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="header-item">
-            <a class="header-link" href="#">Contacts</a>
+          <li class="header item">
+            <a class="header-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="header-info">
-        <ul class="header-info-list">
+        <ul class="header-info list">
           <li class="header-info-item">
             <a class="header-info-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a>
+              >info@devstudio.com</a
+            >
           </li>
           <li class="header-info-item">
             <a class="header-info-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a>
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <main>
-    <section>
-      <h1 hidden>Our works</h1>
-      <ul>
-        <li><button class="hero-btn" type="button">All</button></li>
-        <li><button class="hero-btn" type="button">Web Site</button></li>
-        <li><button class="hero-btn" type="button">App</button></li>
-        <li><button class="hero-btn" type="button">Design</button></li>
-        <li><button class="hero-btn" type="button">Marketing</button></li>
-      </ul>
-    
-      <h2 hidden>Portfolio</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/row1/img.jpg"
-            alt="Banking App Interface Concept"
-            width="360"
-            height="300"
-          />
-          <h3>Banking App Interface Concept</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src="./images/row1/img-1.jpg"
-            alt="Cashless Payment"
-            width="360"
-            height="300"
-          />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/row1/img-2.jpg"
-            alt="Monitor and phone display"
-            width="360"
-            height="300"
-          />
-          <h3>Meditation App</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src="./images/row2/img.jpg"
-            alt="man holding the steering wheel of a car, taxi service"
-            width="360"
-            height="300"
-          />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/row2/img-1.jpg"
-            alt="screenshots of the display of various illustration options"
-            width="360"
-            height="300"
-          />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/row2/img-2.jpg"
-            alt="A smiling girl takes an online course"
-            width="360"
-            height="300"
-          />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/row3/img.jpg"
-            alt="Instagram Stories Concept"
-            width="360"
-            height="300"
-          />
-          <h3>Instagram Stories Concept</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/row3/img-1.jpg"
-            alt="A woman carries vegetables in a bag"
-            width="360"
-            height="300"
-          />
-          <h3>Organic Food</h3>
-          <p>Web Site</p>
-        </li>
-        <li>
-          <img
-            src="./images/row3/img-2.jpg"
-            alt="A person makes a drawing on a cup of coffee"
-            width="360"
-            height="300"
-          />
-          <h3>Fresh Coffee</h3>
-          <p>Web Site</p>
-        </li>
-      </ul>
-    </section>
+      <section class="section-portfolio">
+        <h1 hidden>Our works</h1>
+        <ul class="portfolio-btn list">
+          <li><button class="hero-btn" type="button">All</button></li>
+          <li><button class="hero-btn" type="button">Web Site</button></li>
+          <li><button class="hero-btn" type="button">App</button></li>
+          <li><button class="hero-btn" type="button">Design</button></li>
+          <li><button class="hero-btn" type="button">Marketing</button></li>
+        </ul>
+
+        <h2 class="section-title" hidden>Portfolio</h2>
+        <ul class="portfolio list">
+          <li class="portfolio-item">
+            <a class="portfolio link" href="">
+              <img
+                src="./images/row1/img.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Banking App Interface Concept</h3>
+              <p class="text">App</p></a
+            >
+          </li>
+          <li class="portfolio-item">
+            <a class="portfolio link" href="">
+              <img
+                src="./images/row1/img-1.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Cashless Payment</h3>
+              <p class="text">Marketing</p></a
+            >
+          </li>
+          <li class="portfolio-item">
+            <a class="portfolio link" href="">
+              <img
+                src="./images/row1/img-2.jpg"
+                alt="Monitor and phone display"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Meditation App</h3>
+              <p class="text">App</p></a
+            >
+          </li>
+          <li class="portfolio-item">
+            <a class="portfolio link" href="">
+              <img
+                src="./images/row2/img.jpg"
+                alt="man holding the steering wheel of a car, taxi service"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Taxi Service</h3>
+              <p class="text">Marketing</p></a
+            >
+          </li>
+          <li class="portfolio-item">
+            <a class="portfolio link" href="">
+              <img
+                src="./images/row2/img-1.jpg"
+                alt="screenshots of the display of various illustration options"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Screen Illustrations</h3>
+              <p class="text">Design</p></a
+            >
+          </li>
+          <li class="portfolio-item">
+            <a class="portfolio link" href="">
+              <img
+                src="./images/row2/img-2.jpg"
+                alt="A smiling girl takes an online course"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Online Courses</h3>
+              <p class="text">Marketing</p></a
+            >
+          </li>
+          <li class="portfolio-item">
+            <a class="portfolio link" href="">
+              <img
+                src="./images/row3/img.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Instagram Stories Concept</h3>
+              <p class="text">Design</p></a
+            >
+          </li>
+          <li class="portfolio-item">
+            <a class="portfolio link" href="">
+              <img
+                src="./images/row3/img-1.jpg"
+                alt="A woman carries vegetables in a bag"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Organic Food</h3>
+              <p class="text">Web Site</p></a
+            >
+          </li>
+          <li class="portfolio-item">
+            <a class="portfolio link" href="">
+              <img
+                src="./images/row3/img-2.jpg"
+                alt="A person makes a drawing on a cup of coffee"
+                width="360"
+                height="300"
+              />
+              <h3 class="title">Fresh Coffee</h3>
+              <p class="text">Web Site</p></a
+            >
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer class="footer">
-      <a class="header-logo" href="./index.html">Web<span class="logo-ftr">Studio</span></a>
+      <a class="link header-logo" href="./index.html"
+        >Web<span class="logo-ftr">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-    </main>
     </footer>
   </body>
 </html>
