--- a/portfolio.html
+++ b/portfolio.html
@@ -170,6 +170,8 @@
         </ul>
       </section>
     </main>
+
+     <!-- Footer -->
     <footer class="footer">
       <a class="link header-logo" href="./index.html"
         >Web<span class="logo-ftr">Studio</span></a
