--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li class="header item">
               <a class="link header-link" href="./index.html">Studio</a>
             </li>
-            <li class="header header-item">
+            <li class="header item">
               <a class="link header-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="header item">
@@ -71,28 +71,28 @@
           <h2 hidden class="visually-hidden">Our benefits</h2>
           <ul class="benefits-list list">
             <li class="benefits-item">
-              <h3 class="title">Strategy</h3>
+              <h3 class="bnfts-title title">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with the
                 perfect and creative solution.
               </p>
             </li>
             <li class="benefits-item">
-              <h3 class="title">Punctuality</h3>
+              <h3 class="bnfts-title title">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="benefits-item">
-              <h3 class="title">Diligence</h3>
+              <h3 class="bnfts-title title">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="benefits-item">
-              <h3 class="title">Technologies</h3>
+              <h3 class="bnfts-title title">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -137,14 +137,14 @@
             <li class="team-item">
               <img src="./images/smilingman.jpg" alt="smiling man" width="264" />
               <div class="team-text-info">
-                <h3 class="title">Tom Ford</h3>
+                <h3 class="title title-persn">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
               </div>
             </li>
             <li class="team-item">
               <img src="./images/woman.jpg" alt="woman" width="264" />
               <div class="team-text-info">
-                <h3 class="title">Camila Garcia</h3>
+                <h3 class="title title-persn">Camila Garcia</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
@@ -155,7 +155,7 @@
                 width="264"
               />
               <div class="team-text-info">
-                <h3 class="title">Daniel Wilson</h3>
+                <h3 class="title title-persn">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
               </div>
             </li>
