--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@ href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.c
             <li class="header item">
               <a class="link header-link" href="./index.html">Studio</a>
             </li>
-            <li class="header header-item">
+            <li class="header item">
               <a class="link header-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="header item">
