--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
+ 
+ 
   </head>
   <body class="page">
     <header class="header brd">
@@ -30,13 +32,13 @@
             >Web<span class="logo">Studio</span></a
           >
           <ul class="header-list list">
-            <li class="header item">
+            <li class="header-item">
               <a class="link header-link" href="./index.html">Studio</a>
             </li>
-            <li class="header item">
+            <li class="header-item">
               <a class="link header-link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="header item">
+            <li class="header-item">
               <a class="link header-link" href="">Contacts</a>
             </li>
           </ul>
@@ -60,7 +62,7 @@
     <main class="main">
       <!-- section 1 -->
       <section class="section-hero">
-        <div class="container">
+        <div class="hero-container container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button">Order Service</button>
         </div>
