--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,13 @@ href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.c
             >Web<span class="logo">Studio</span></a
           >
           <ul class="header-list list">
-            <li class="header item">
+            <li class="header-item">
               <a class="link header-link" href="./index.html">Studio</a>
             </li>
-            <li class="header item">
+            <li class="header-item">
               <a class="link header-link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="header item">
+            <li class="header-item">
               <a class="link header-link" href="">Contacts</a>
             </li>
           </ul>
