--- a/portfolio.html
+++ b/portfolio.html
@@ -12,11 +12,11 @@
       rel="stylesheet"
     />
 
-<!-- Normalize -->
-<link
-rel="stylesheet"
-href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
-/>
+    <!-- Normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
@@ -56,6 +56,9 @@ href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.c
         </address>
       </div>
     </header>
+
+    <!-- Main -->
+
     <main>
       <section class="section-portfolio">
         <div class="container">
@@ -71,24 +74,34 @@ href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.c
               <button class="btn-portfolio" type="button">Marketing</button>
             </li>
           </ul>
+
+          <!-- Portfolio list -->
+
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <a class="portfolio link" href="">
-                <img
+              <a class="portfolio-link link" href="">
+                <img class="portfolio-img"
                   src="./images/row1/img-2.jpg"
                   alt="Banking App Interface Concept"
                   width="360"
                   height="300"
                 />
+                <!-- <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div> -->
                 <div class="portf-img-info">
-                  <h2 class="portf-title title">Banking App Interface Concept</h2>
+                  <h2 class="portf-title title">
+                    Banking App Interface Concept
+                  </h2>
                   <p class="text">App</p>
                 </div>
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="portfolio link" href="">
-                <img
+              <a class="portfolio-link link" href="">
+                <img 
                   src="./images/row1/img-1.jpg"
                   alt="Cashless Payment"
                   width="360"
